--- a/server-worker/src/test/resources/log4j.properties
+++ b/server-worker/src/test/resources/log4j.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 # Set everything to be logged to the file target/unit-tests.log
-log4j.rootCategory=INFO, console
+log4j.rootCategory=DEBUG, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
