--- a/common/pom.xml
+++ b/common/pom.xml
@@ -103,6 +103,10 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-reflect</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
