--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 
     <maven.plugin.antrun.version>3.0.0</maven.plugin.antrun.version>
     <maven.plugin.dependency.version>3.1.1</maven.plugin.dependency.version>
+    <maven.plugin.flatten.version>1.3.0</maven.plugin.flatten.version>
     <maven.plugin.jar.version>3.0.2</maven.plugin.jar.version>
     <maven.plugin.os.version>1.5.0.Final</maven.plugin.os.version>
     <maven.plugin.protobuf.version>0.5.1</maven.plugin.protobuf.version>
@@ -539,6 +540,8 @@
               <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
               <spark.driver.memory>1g</spark.driver.memory>
             </systemProperties>
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
             <failIfNoTests>false</failIfNoTests>
           </configuration>
           <executions>
@@ -558,6 +561,11 @@
           <configuration>
             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
             <filereports>TestSuite.txt</filereports>
+            <!--
+              the plugin does not support always now, we must be careful w/ singletons.
+              tracking at: https://github.com/scalatest/scalatest-maven-plugin/issues/99
+              -->
+            <forkMode>once</forkMode>
             <systemProperties>
               <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
               <log4j2.configurationFile>src/test/resources/log4j2-test.xml</log4j2.configurationFile>
@@ -571,6 +579,31 @@
               <goals>
                 <goal>test</goal>
               </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>flatten-maven-plugin</artifactId>
+          <version>${maven.plugin.flatten.version}</version>
+          <configuration>
+            <flattenMode>oss</flattenMode>
+          </configuration>
+          <executions>
+            <execution>
+              <id>flatten</id>
+              <goals>
+                <goal>flatten</goal>
+              </goals>
+              <phase>process-resources</phase>
+            </execution>
+            <execution>
+              <id>flatten.clean</id>
+              <goals>
+                <goal>clean</goal>
+              </goals>
+              <phase>clean</phase>
             </execution>
           </executions>
         </plugin>
@@ -750,6 +783,11 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
