--- a/client-spark/spark-2/pom.xml
+++ b/client-spark/spark-2/pom.xml
@@ -119,10 +119,7 @@
           <artifactSet>
             <includes>
               <!-- Include here the dependencies you want to be packed in your fat jar -->
-              <include>org.apache.celeborn:common</include>
-              <include>org.apache.celeborn:client</include>
-              <include>org.apache.celeborn:shuffle-manager-common</include>
-              <include>org.apache.celeborn:shuffle-manager</include>
+              <include>org.apache.celeborn:*</include>
               <include>com.google.protobuf:protobuf-java</include>
               <include>com.google.guava:guava</include>
               <include>io.netty:*</include>
